<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:sothree="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.yasser.mazr3a_task.ui.home.HomeViewModel" />
    </data>

    <com.sothree.slidinguppanel.SlidingUpPanelLayout
        android:gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/sliding_layout"
        sothree:umanoDragView="@+id/dragView"
        sothree:umanoOverlay="true"
        sothree:umanoPanelHeight="0dp"
        sothree:umanoParallaxOffset="100dp"
        sothree:umanoScrollableView="@+id/dragView"
        sothree:umanoShadowHeight="4dp">

        <!-- MAIN CONTENT -->
        <RelativeLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            tools:context=".ui.home.HomeActivity">
            <LinearLayout
                android:id="@+id/NoConnectionLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
               android:layout_above="@+id/bottomNavBar"
                android:background="@android:color/holo_red_dark"
                android:padding="10dp"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="No Internet Connection"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>
            <FrameLayout
                android:id="@+id/main_fragment"
                android:layout_above="@+id/bottomNavBar"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:background="@color/main_background"
                android:id="@+id/bottomNavBar"
                android:layout_alignParentBottom="true"
                android:layout_height="?attr/actionBarSize"
                android:layout_width="match_parent"
                app:menu="@menu/home_menu" />

        </RelativeLayout>

        <!-- SLIDING LAYOUT -->
        <ScrollView
            android:background="@drawable/corner_white_background"
            android:id="@+id/dragView"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ProgressBar
                    android:visibility="gone"
                    android:id="@+id/LoadingProgress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_width="match_parent"
                    android:orientation="vertical">

                    <View
                        android:background="@color/darker_green"
                        android:id="@+id/top_line"
                        android:layout_height="3dp"
                        android:layout_marginEnd="50dp"
                        android:layout_marginStart="50dp"
                        android:layout_width="match_parent" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:id="@+id/userEmail"

                        android:layout_width="match_parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:hint="@string/enter_email"
                            android:text="@={viewmodel.displayUser.email}"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:id="@+id/userName"

                        android:layout_width="match_parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:hint="@string/enter_name"
                            android:text="@={viewmodel.displayUser.name}"

                            android:layout_height="wrap_content"
                            android:layout_width="match_parent" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:id="@+id/userPhone"

                        android:layout_width="match_parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:hint="@string/enter_phone"
                            android:enabled="false"
                            android:text="@={viewmodel.displayUser.phone}"
                            android:inputType="number"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:gravity="center"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_width="match_parent"
                        android:text="@string/choose_location"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <Button
                        android:background="@drawable/oval_button_background"
                        android:layout_gravity="center"
                        android:onClick="@{viewmodel::OnHomeLocationTapped}"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_width="wrap_content"
                        android:text="@string/home_location"
                        android:textColor="@color/darker_green" />

                    <Button
                        android:background="@drawable/oval_button_background"
                        android:layout_gravity="center"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_width="wrap_content"
                        android:text="@string/office_location"
                        android:textColor="@color/darker_green" />

                    <Button
                        android:background="@drawable/oval_button_background"
                        android:layout_gravity="center"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_width="wrap_content"
                        android:text="@string/other_location"
                        android:textColor="@color/darker_green" />

                    <RadioGroup
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="55dp"
                        android:layout_marginStart="55dp"
                        android:layout_marginTop="20dp"
                        android:layout_width="match_parent">

                        <RadioButton
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:paddingEnd="10dp"
                            android:checked="@={viewmodel.paymentoptionA}"
                            android:paddingStart="10dp"
                            android:text="@string/payment_type_1" />

                        <RadioButton
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:paddingEnd="10dp"
                            android:paddingStart="10dp"
                            android:text="@string/payment_type_2" />
                    </RadioGroup>

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_width="wrap_content"
                        android:text="@string/alert_in_order"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:text="@string/order_alert_description"
                        android:textColor="@color/black" />

                    <Button
                        android:onClick="@{viewmodel::OrderBtnTapped}"
                        android:background="@color/darker_green"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:layout_marginEnd="50dp"
                        android:layout_marginStart="50dp"
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:text="@string/order" />
                </LinearLayout>
            </RelativeLayout>



        </ScrollView>
    </com.sothree.slidinguppanel.SlidingUpPanelLayout>

</layout>

