<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.login.LoginActivity">

    <data>

        <variable
            name="viewmodel"
            type="com.yasser.mazr3a_task.ui.login.LoginViewModel" />
    </data>

    <RelativeLayout
        android:background="@color/main_background"

        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <ImageView
        android:id="@+id/v1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/ic_app"
        android:contentDescription="@string/app_name" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/v1"
        android:layout_marginTop="5dp"
        android:background="@drawable/corner_white_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/welcome"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/corner_gray_background"
                android:gravity="center"

                android:padding="3dp">

                <com.hbb20.CountryCodePicker
                    android:id="@+id/country_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <EditText
                    android:id="@+id/numberEdt"
                    android:background="@android:color/transparent"
                    android:inputType="number"
                    android:hint="@string/enter_phone"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent" />
            </LinearLayout>

            <Button
                android:id="@+id/loginBtn"
                android:text="@string/login"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textColor="@android:color/black"
                android:background="@drawable/corner_gray_background"
                android:layout_width="match_parent"
                android:layout_marginTop="50dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </ScrollView>
    </RelativeLayout>
</layout>