<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    tools:context=".ui.product_details.ProductDetailsActivity">
<data>
    <variable
        name="viewmodel"
        type="com.yasser.mazr3a_task.ui.product_details.ProductDetailsViewModel" />
</data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/main_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/lay1"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"

                android:gravity="center">

                <ImageView
                    android:id="@+id/backBtn"
                    android:onClick="@{viewmodel::OnBackTapped}"
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_back" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:gravity="start|center"
                    android:text="@string/app_name"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />


            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="250dp"

                card_view:cardBackgroundColor="@android:color/white"
                card_view:cardCornerRadius="1dp"
                card_view:cardElevation="3dp">

                <ImageView
                    android:id="@+id/productImage"
                    android:src="@{viewmodel.productImage}"
                    android:scaleType="centerCrop"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </androidx.cardview.widget.CardView>
            <TextView
                android:id="@+id/productID"


                android:layout_width="wrap_content"
                android:text="@{viewmodel.displayProduct.getCodeID}"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/productName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:text="@{viewmodel.displayProduct.name}"
                android:textColor="@android:color/black"/>
            <TextView
                android:id="@+id/productWeight"
                android:text="@{viewmodel.displayProduct.weight}"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/productDescription"
                android:text="@{viewmodel.displayProduct.fromatedDescription}"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:text="EGP "
                    android:textSize="22sp"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/productPrice"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_gravity="start|center"
                    android:text="@{viewmodel.displayprice}"
                    android:textSize="22sp"

                    android:textColor="@color/black"
                    android:layout_height="wrap_content"/>
                <LinearLayout
                    android:layout_weight="1"
                    android:gravity="center"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/count"
                        android:textSize="20dp"
                        android:layout_gravity="center"
                        android:layout_height="wrap_content"/>
                    <Button
                        android:layout_width="30sp"
                        android:layout_gravity="center"
                        android:onClick="@{viewmodel::subItem}"
                        android:background="@drawable/ic_sub_count"
                        android:layout_marginStart="3dp"
                        android:layout_marginEnd="3dp"
                        android:layout_height="30sp"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:text="@{viewmodel.displayItems}"
                        android:layout_gravity="center"

                        android:gravity="center"
                        android:layout_height="wrap_content"/>
                    <Button
                        android:layout_width="30sp"
                        android:background="@drawable/ic_add_count"
                        android:layout_gravity="center"
                        android:onClick="@{viewmodel::AddItem}"
                        android:layout_height="30sp"/>
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/BtnAddToCart"
                android:layout_marginTop="30sp"
                android:layout_gravity="center"
                android:drawableLeft="@drawable/ic_add_shopping_cart"
                android:textColor="@color/light_green"
                android:drawablePadding="5dp"
                android:text="@string/add_to_cart"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_marginBottom="20dp"
                android:onClick="@{viewmodel::AddToCart}"
                android:background="@drawable/corner_button_with_green_border"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>


    </ScrollView>
</layout>